ALM-295 corrected spacing issues around graphs and titles

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1558,10 +1558,6 @@ caption {
   margin: 31px 0 0 37px;
 }
 
-.visualizations-list .report-graph {
-  margin: 31px 0 0 37px;
-}
-
 .visualizations-list .info {
   margin: 24px 0 0 44px;
   padding: 0;
